# post-kamailio-module-cpp

./: Makefile  README  zzz_mod.c
libzzz/: CMakeLists.txt
libzzz/src/: CMakeLists.txt
libzzz/src/examples/: CMakeLists.txt
libzzz/src/examples/hello_world/: CMakeLists.txt  main.cpp
libzzz/src/examples/hello_world_c/: CMakeLists.txt  main.c
libzzz/src/zzz/: CMakeLists.txt  core-c.cpp  core-c.hpp  core.cpp  core.hpp  core.test.cpp
