#
# Project Properties
#
CMAKE_MINIMUM_REQUIRED (VERSION 2.6.2)
PROJECT (zzz)
SET (APPLICATION_NAME "ZZZ Library")
SET (APPLICATION_CODENAME "${PROJECT_NAME}")
execute_process(COMMAND echo 9 OUTPUT_VARIABLE APPLICATION_VERSION_MAJOR OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND echo 9 OUTPUT_VARIABLE APPLICATION_VERSION_MINOR OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND echo 9 OUTPUT_VARIABLE APPLICATION_VERSION_PATCH OUTPUT_STRIP_TRAILING_WHITESPACE)
SET (APPLICATION_VERSION_TYPE DS1)
SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")

#
# Configurable Options
#
OPTION (ZZZ_BUILD_SHARED "Build shared object" OFF)
OPTION (ZZZ_BUILD_STATIC "Build static library" ON)
OPTION (ZZZ_BUILD_TESTS "Build unit test suite" ON)
OPTION (ZZZ_BUILD_EXAMPLES "Build examples" ON)

#
# Debugging Options
#
SET (CMAKE_VERBOSE_MAKEFILE 0) # Use 1 for debugging, 0 for release

#
# Project Output Paths
#
SET (MAINFOLDER ${PROJECT_SOURCE_DIR})
SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")
SET (LIBRARY_OUTPUT_PATH "${MAINFOLDER}/lib")

#
# Project Search Paths
#
LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}")
SET (CMAKE_MODULE_PATH "${MAINFOLDER}/cmake")
INCLUDE_DIRECTORIES ("${MAINFOLDER}/src")

#
# Locate Project Prerequisites
SET(BOOST_ROOT "/usr/include")
FIND_PACKAGE (Boost 1.53 COMPONENTS "system" REQUIRED)
INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES (${Boost_LIBRARY_DIRS})

INCLUDE (EnableStdCXX11)
ENABLE_STDCXX11 ()

#
# Enable warnings
#
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic-errors -Wextra -Wno-missing-field-initializers -fPIC")

#
# Configure Files
#
FILE (GLOB_RECURSE CONFIGINPUTS1 src/zzz/*.hpp.in.cmake)
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS1}")
FOREACH (CONFIGINPUT ${CONFIGINPUTS})
    STRING (REPLACE ".hpp.in.cmake" ".hpp" CONFIGOUTPUT "${CONFIGINPUT}")
    CONFIGURE_FILE ("${CONFIGINPUT}" "${CONFIGOUTPUT}")
ENDFOREACH (CONFIGINPUT ${CONFIGINPUTS})

#
# Add Build Targets
#
IF (ZZZ_BUILD_TESTS)
    ENABLE_TESTING (true)
ENDIF (ZZZ_BUILD_TESTS)
ADD_SUBDIRECTORY (src)
