#
# Locate project sources
#
FILE (GLOB_RECURSE zzz_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
FILE (GLOB_RECURSE zzz_HDRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

#
# Locate test sources and remove from project sources
#
FILE (GLOB_RECURSE test_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*.test.cpp)
LIST (REMOVE_ITEM zzz_SRCS ${test_SRCS})

#
# Configure common project settings
#
SET (zzz_LIBS ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
SET (zzz_BIN ${PROJECT_NAME})

IF (NOT DEFINED ZZZ_BUILD_SHARED)
	IF (CMAKE_CROSSCOMPILING)
		SET(ZZZ_BUILD_SHARED 0)
	ELSE (CMAKE_CROSSCOMPILING)
		SET(ZZZ_BUILD_SHARED 1)
	ENDIF (CMAKE_CROSSCOMPILING)
ENDIF (NOT DEFINED ZZZ_BUILD_SHARED)

IF (NOT DEFINED ZZZ_BUILD_STATIC)
	SET(ZZZ_BUILD_STATIC 1)
ENDIF (NOT DEFINED ZZZ_BUILD_STATIC)

#
# Static lib build rules
#
IF (ZZZ_BUILD_STATIC)
	ADD_LIBRARY (${PROJECT_NAME} STATIC ${zzz_SRCS} ${zzz_RLSOURCES})
	TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${zzz_LIBS})
	SET_TARGET_PROPERTIES (${PROJECT_NAME} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${zzz_BIN} CLEAN_DIRECT_OUTPUT 1)
	INSTALL (TARGETS ${PROJECT_NAME} DESTINATION lib)
ENDIF (ZZZ_BUILD_STATIC)

#
# Shared object build rules
#
IF (ZZZ_BUILD_SHARED)
	ADD_LIBRARY (${PROJECT_NAME} SHARED ${zzz_SRCS} ${zzz_RLSOURCES})
	TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${zzz_LIBS})
	SET_TARGET_PROPERTIES (${PROJECT_NAME} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${zzz_BIN} CLEAN_DIRECT_OUTPUT 1)
	INSTALL (TARGETS ${PROJECT_NAME} DESTINATION lib)
ENDIF (ZZZ_BUILD_SHARED)

#
# Configure common test settings
#
SET (test_LIBS ${Boost_LIBRARIES} ${PROJECT_NAME})
SET (test_HDRS "../test/catch.cpp")

#
# Test build rules
#
IF (ZZZ_BUILD_TESTS)
	IF (NOT CMAKE_CROSSCOMPILING)
		LINK_DIRECTORIES (${MAINFOLDER}/lib)
		FOREACH (T_FILE ${test_SRCS})
			GET_FILENAME_COMPONENT (T_NAME ${T_FILE} NAME_WE)
			SET (T_NAME "${T_NAME}_test")
			ADD_EXECUTABLE (${T_NAME} ${T_FILE} ${test_HDRS})
			TARGET_LINK_LIBRARIES (${T_NAME} ${test_LIBS})
			ADD_TEST (${T_NAME} ${MAINFOLDER}/bin/${T_NAME})
		ENDFOREACH (T_FILE ${test_SRCS})
	ENDIF (NOT CMAKE_CROSSCOMPILING)
ENDIF (ZZZ_BUILD_TESTS)

#
# Install target
#
FOREACH (H_FILE ${zzz_HDRS})
	SET (H_INSTALL_DIR "zzz")
	STRING (REGEX MATCH "(.*)[/\\]" DIR ${H_FILE})
	INSTALL (FILES ${H_FILE} DESTINATION include/${H_INSTALL_DIR}/${DIR})
ENDFOREACH (H_FILE ${zzz_HDRS})
